[package]
name = "s4"
description = "Simpler Simple Storage Service: highlevel API extensions for Rusoto's S3Client"
version = "0.0.4"
documentation = "https://docs.rs/s4"
repository = "https://github.com/pgerber/s4"
authors = ["Peter Gerber <peter@arbitrary.ch>"]
license = "LGPL-3.0+"
readme = "README.md"
keywords = ["AWS", "S3"]

[badges]
travis-ci = { repository = "pgerber/s4" }

[dependencies]
derive-error = "0.0"
fallible-iterator = "0.1"
futures = "0.1"
rusoto_core = "0.32"
rusoto_credential = "0.11"
rusoto_s3 = "0.32"
tokio-io = "0.1"

[dev-dependencies]
tempdir = "0.3"
rand = "0.4"
quickcheck = "0.6"
